add new feature

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
+    <div>
     <p>This is a new repo</p>
+    <p>This is a feature.</p>
+    </div>
+    
 </body>
 </html>
