--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <div>
     <p>This is a new repo</p>
-    <p>This is a feature.</p>
+    <p>This is a feature.(button)</p>
     </div>
-    
 </body>
 </html>
