--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
     <p>This is a new repo</p>
-    <p>This is a feature.</p>
+    <p>This is a feature.(dropdown)</p>
     </div>
     
 </body>
